# feishin-connect

./: .dockerignore  .gitignore  .npmrc  .prettierrc.yaml  .stylelintrc.json  CHANGELOG.md  Dockerfile  README.md  build.sh  docker-compose.yaml  electron-builder-alpha.yml  electron-builder-beta.yml  electron-builder.yml  electron.vite.config.ts  eslint.config.mjs  feishin.desktop  install-feishin-appimage  io.github.mihaitom.feishin-connect.metainfo.xml  merge-upstream.md  ng.conf.template  org.jeffvli.feishin.metainfo.xml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.cjs  publish.py  publish.sh  remote.vite.config.ts  settings.js.template  start.sh  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.web.json  tsconfig.web.tsbuildinfo  vitest.config.ts  vitest.setup.ts  web.vite.config.ts
connect/: .env.example  auth.py  build-binary.py  build-binary.sh  connect-server.spec  credentials.py  delivery.py  jellyfin.py  main.py  media.py  pyproject.toml  sonos_ctrl.py  state.py  streamer.py  subsonic.py
connect/delivery/: __init__.py  airplay.py  base.py  chromecast.py  credentials.py  manager.py  sonos.py
connect/lyrics/: __init__.py  lrclib.py  netease.py  shared.py  simpmusic.py
connect/media/: __init__.py  base.py  jellyfin.py  subsonic.py
connect/routes/: devices.py  lyrics.py  pairing.py  playback.py  proxy.py  stream.py
connect/scripts/: airplay_probe.py
connect/tests/: conftest.py  test_auth.py  test_config.py  test_credentials.py  test_delivery_classes.py  test_delivery_manager.py  test_devices.py  (+9 more)
(+1080 files in other folders)
