[project]
name = "navidrome-connect"
version = "0.1.0-dev.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[all]>=0.136.1",
    "httpx>=0.28.1",
    "mutagen>=1.47.0",
    "pyacoustid>=1.3.1",
    "pyatv>=0.17.0",
    "python-dotenv>=1.2.2",
    "soco>=0.31.0",
    "tqdm>=4.67.3",
    "tunesynctool>=1.2.1",
]
