[project]
name = "feishin-connect"
version = "0.2.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[all]>=0.136.1",
    "httpx>=0.28.1",
    "pyatv>=0.17.0",
    "pychromecast>=14.0.0",
    "python-dotenv>=1.2.2",
    "soco>=0.31.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.11",
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "ruff>=0.15.13",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
